# bounded-static

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
bounded-static/: Cargo.toml
bounded-static-derive/: Cargo.toml  README.md
bounded-static-derive/src/: common.rs  data_enum.rs  data_struct.rs  lib.rs
bounded-static-derive/tests/: integration_tests.rs
bounded-static/src/: lib.rs
bounded_static/: Cargo.toml
bounded_static/src/: lib.rs
bounded_static_derive/: Cargo.toml  README.md
bounded_static_derive/src/: common.rs  data_enum.rs  data_struct.rs  data_struct_named.rs  data_struct_unit.rs  data_struct_unnamed.rs  generate.rs  generics.rs  lib.rs
bounded_static_derive/tests/: integration_tests.rs
src/: lib.rs
