[package]
name = "bounded-static"
version = "0.1.0"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "defines the ToBoundedStatic and IntoBoundedStatic traits"
repository = "https://github.com/fujiapple852/bounded_static"
license = "Apache-2.0"
edition = "2021"

[features]
default = [ "collections", "alloc", "std" ]

# Enable impls of [To|Into]BoundedStatic for common types in the alloc crate.
alloc = []

# Enable impls of [To|Into]BoundedStatic for collections in the alloc crate.
collections = [ "alloc" ]

# Enable impls of [To|Into]BoundedStatic for other types in std.
std = [ "alloc" ]