[workspace]
resolver = "2"
members = ["bounded-static", "bounded-static-derive"]

[workspace.package]
version = "0.7.0"
rust-version = "1.64.0"
edition = "2021"
authors = ["FujiApple <fujiapple852@gmail.com>"]
repository = "https://github.com/fujiapple852/bounded-static"
license = "Apache-2.0"
keywords = ["cow", "static", "bounded", "owned", "derive"]
categories = ["no-std", "rust-patterns", "data-structures", "memory-management"]