[workspace]
resolver = "2"
members = ["bounded-static", "bounded-static-derive"]

[workspace.package]
version = "0.8.0"
rust-version = "1.64.0"
edition = "2021"
authors = ["FujiApple <fujiapple852@gmail.com>"]
repository = "https://github.com/fujiapple852/bounded-static"
license = "Apache-2.0"
keywords = ["cow", "static", "bounded", "owned", "derive"]
categories = ["no-std", "rust-patterns", "data-structures", "memory-management"]

[workspace.dependencies]
bounded-static = { version = "0.8.0", path = "bounded-static" }
bounded-static-derive = { version = "0.8.0", path = "bounded-static-derive" }
syn = { version = "2.0.38", features = [ "full" ] }
quote = "1.0.33"
proc-macro2 = "1.0.69"
test-case = "3.3.1"
smol_str-02 = { package = "smol_str", version = "0.2.2", default-features = false }
smallvec-1 = { package = "smallvec", version = "1.13.2", default-features = false }
smartstring-1 = { package = "smartstring", version = "1.0.1", default-features = false }
ahash-08 = { package = "ahash", version = "0.8.11", default-features = false }
chrono-04 = { package = "chrono", version = "0.4.38", default-features = false }