[package]
name = "bounded-static-derive"
description = "Macro to derive ToBoundedStatic and IntoBoundedStatic traits"
readme = "README.md"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.38", features = [ "full" ] }
quote = "1.0.33"
proc-macro2 = "1.0.69"

[dev-dependencies]
bounded-static = { version = "0.7.0", path = "../bounded-static", features = [ "derive" ] }