[package]
name = "bounded-static-derive"
version = "0.7.0"
rust-version = "1.64.0"
edition = "2021"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Macro to derive ToBoundedStatic and IntoBoundedStatic traits"
readme = "README.md"
repository = "https://github.com/fujiapple852/bounded-static"
license = "Apache-2.0"
keywords = ["cow", "static", "bounded", "owned", "derive"]
categories = ["no-std", "rust-patterns", "data-structures", "memory-management"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.38", features = [ "full" ] }
quote = "1.0.33"
proc-macro2 = "1.0.69"

[dev-dependencies]
bounded-static = { version = "0.7.0", path = "../bounded-static", features = [ "derive" ] }