[package]
name = "bounded-static-derive"
description = "Macro to derive ToBoundedStatic and IntoBoundedStatic traits"
readme = "README.md"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
bounded-static = { workspace = true, features = [ "derive" ] }