[package]
name = "bounded-static"
description = "Defines the ToBoundedStatic and IntoBoundedStatic traits"
readme = "README.md"
repository = "https://github.com/fujiapple852/bounded-static"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = [ "collections", "alloc", "std" ]

# Enable impls of [To|Into]BoundedStatic for common types in the alloc crate.
alloc = []

# Enable impls of [To|Into]BoundedStatic for collections in the alloc crate.
collections = [ "alloc" ]

# Enable impls of [To|Into]BoundedStatic for other types in std.
std = [ "alloc", "ahash?/std" ]

# Enable the ToStatic custom derive macro.
derive = [ "bounded-static-derive" ]

[dependencies]
bounded-static-derive = { version = "0.7.0", path = "../bounded-static-derive", optional = true }
smol_str = { version = "0.2.2", optional = true, default-features = false }
smallvec = { version = "1.13.2", optional = true, default-features = false }
smartstring = { version = "1.0.1", optional = true, default-features = false }
ahash = { version = "0.8.11", optional = true, default-features = false }

[package.metadata.docs.rs]
all-features = true
