[package]
name = "bounded-static"
description = "Defines the ToBoundedStatic and IntoBoundedStatic traits"
readme = "README.md"
repository = "https://github.com/fujiapple852/bounded-static"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = [ "collections", "alloc", "std" ]

# Enable impls of [To|Into]BoundedStatic for common types in the alloc crate.
alloc = []

# Enable impls of [To|Into]BoundedStatic for collections in the alloc crate.
collections = [ "alloc" ]

# Enable impls of [To|Into]BoundedStatic for other types in std.
std = [ "alloc", "ahash?/std", "chrono?/std" ]

# Enable the ToStatic custom derive macro.
derive = [ "bounded-static-derive" ]

# Enable the clock feature for chrono.
chrono-clock = [ "chrono", "chrono/clock" ]

[dependencies]
bounded-static-derive = { workspace = true, optional = true }
smol_str = { workspace = true, optional = true, default-features = false }
smallvec = { workspace = true, optional = true, default-features = false }
smartstring = { workspace = true, optional = true, default-features = false }
ahash = { workspace = true, optional = true, default-features = false }
chrono = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
test-case.workspace = true

[package.metadata.docs.rs]
all-features = true
