[package]
name = "bounded-static"
description = "Defines the ToBoundedStatic and IntoBoundedStatic traits"
readme = "README.md"
repository = "https://github.com/fujiapple852/bounded-static"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = [ "collections", "alloc", "std" ]

# Enable impls of [To|Into]BoundedStatic for common types in the alloc crate.
alloc = []

# Enable impls of [To|Into]BoundedStatic for collections in the alloc crate.
collections = [ "alloc" ]

# Enable impls of [To|Into]BoundedStatic for other types in std.
std = [ "alloc", "ahash-08?/std", "chrono-04?/std" ]

# Enable the ToStatic custom derive macro.
derive = [ "bounded-static-derive" ]

# Enable the clock feature for chrono.
chrono-clock-04 = [ "chrono-04", "chrono-04/clock" ]

[dependencies]
bounded-static-derive = { workspace = true, optional = true }
smol_str-02 = { workspace = true, optional = true, default-features = false }
smallvec-1 = { workspace = true, optional = true, default-features = false }
smartstring-1 = { workspace = true, optional = true, default-features = false }
ahash-08 = { workspace = true, optional = true, default-features = false }
chrono-04 = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
test-case.workspace = true

[package.metadata.docs.rs]
all-features = true
