[package]
name = "bounded-static-derive"
version = "0.2.0"
rust-version = "1.58.1"
edition = "2021"
authors = ["FujiApple <fujiapple852@gmail.com>"]
description = "Macro to derive ToBoundedStatic and IntoBoundedStatic traits"
readme = "README.md"
repository = "https://github.com/fujiapple852/bounded_static"
license = "Apache-2.0"
keywords = ["cow", "static", "bounded", "owned", "derive"]
categories = ["no-std", "rust-patterns", "data-structures", "memory-management"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.86", features = [ "full" ] }
quote = "1.0.15"
proc-macro2 = "1.0.36"

[dev-dependencies]
bounded-static = { version = "0.2.0", path = "../bounded_static", features = [ "derive" ] }